:sparkles: add initialize.sql & setup initialize settings (p.93-96)

--- a/php-book-app/docker-compose.yml
+++ b/php-book-app/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: .
       dockerfile: ./Docker/mysql/Dockerfile
+    volumes:
+      - ./Docker/mysql/sqls:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_ROOT_PASSWORD=secret
     ports:
